--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ai-sdk/mistral": "^1.2.7",
     "@ai-sdk/openai": "^1.0.4",
     "@auth0/auth0-react": "^2.2.0",
     "@aws-amplify/auth": "^5.6.0",
